--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h4> Therefore I will by the end of next year...</h4>
 
 
-  <p> Visit a country in Asia - Try something i normally would say no to</p>
+  <p> Visit a country in Asia -Try something i normally would say no to</p>
 
       <p> Climb Kebnekaise - TO THE TOP! </p>
 
@@ -19,7 +19,7 @@
 
       <p> Update my knowledge in either french or spanish so I can comunicate properly</p>
 <p>extra txt for commit</p>
-   
+   <p> extra extra texting for commit</p>
 <p> To be continued.. </p>
 </body>
 
