add info to index.html in bug-fix

--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
 
   <p> Visit a country in Asia -Try something i normally would say no to</p>
 
-      <p> Climb Kebnekaise - TO THE TOP! </p>
+  <p> Climb Kebnekaise - TO THE TOP! </p>
 
-      <P> Fly a helicopter or BungySwing </P>
+  <P> Fly a helicopter or BungySwing </P>
+  <p> Update my knowledge in either french or spanish so I can comunicate properly</p>
+  <p> extra txt for commit</p>
+  <p> extra extra texting for commit</p>
+  <p> To be continued.. </p>
 
-      <p> Update my knowledge in either french or spanish so I can comunicate properly</p>
-<p>extra txt for commit</p>
-   <p> extra extra texting for commit</p>
-<p> To be continued.. </p>
+  <p>knock knock</p>
 
-<p>knock knock</p>
+  <p>who's there?</p>
 
-<p>who's there?</p>
+  <p>daisy!</p>
 
-<p>daisy!</p>
+  <p>daisy who?</p>
 
-<p>daisy who?</p>
+  <p>They see me rollin</p>
+
+
 </body>
+<p> Pickle Rick </p>
 
 </html>
