--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my first webpage</title>
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/index.css">
+  <style>
+    h1 {
+      color: blue;
+    }
+  </style>
 </head>
 <body>
   <h2> My bucketlist</h2>
@@ -17,8 +24,7 @@
 
   <P> Fly a helicopter or BungySwing </P>
   <p> Update my knowledge in either french or spanish so I can comunicate properly</p>
-  <p> extra txt for commit</p>
-  <p> extra extra texting for commit</p>
+
   <p> To be continued.. </p>
 
   <p>knock knock</p>
@@ -31,8 +37,49 @@
 
   <p>They see me rollin</p>
 
+  <header>
+    <h1>Hey young world</h1> 
+    <nav>
+       <ul>
+           <li><a href="https://sundsgarden.se/">Sundsgårdens Webpage</a></li>
+           <li><a href="#second-paragraph">seconde-paragraph</a></li>
+       </ul>
+       <ol>
+        <li>first</li>
+        <li>second</li>
+       </ol>
 
+   </nav>
+   </header>
+   <main>
+     <section id="seconde-paragraph">
+      <p>If you wanna be somebody</p>
+      <p>If you wanna go somehwere </p> 
+      <p>You better wake up and pay attention</p>
+    </section>
+
+    <section>
+<p class="cat-info"> 
+   who let the dogs
+   who? who? who? who?
+</p>
+<img src="images/MaKitties.jpg" alt="Kitties" title="My kitties">
+  </section>
+
+<section>
+  <p class="last-paragraph">
+    Lalalalala Bamba!
+  </p>
+
+  </section>
+
+
+</main>
+<footer>
+  <h5>
+ 
+  </h5>
+</footer>
+ 
 </body>
-<p> Pickle Rick </p>
-
 </html>
