--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
   <p> Visit a country in Asia -Try something i normally would say no to</p>
 
   <p> Climb Kebnekaise - TO THE TOP! </p>
+  
+<p> Fly a helicopter or BungySwing </p>
 
-  <P> Fly a helicopter or BungySwing </P>
   <p> Update my knowledge in either french or spanish so I can comunicate properly</p>
 
   <p> To be continued.. </p>
