--- a/index.html
+++ b/index.html
@@ -4,75 +4,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my first webpage</title>
-  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/index.css">
   <style>
     h1 {
-      color: blue;
+      color: purple;
     }
   </style>
 </head>
 <body>
   <h2> My bucketlist</h2>
-  <h3> First off, Im a coward when it comes to doing something new...</h3>
-  <h4> Therefore I will by the end of next year...</h4>
-
-
-  <p> Visit a country in Asia -Try something i normally would say no to</p>
-
-  <p> Climb Kebnekaise - TO THE TOP! </p>
+  <h3> First off, Im a coward when it comes to doing something new...<br>Therefore I will by the end of next year...</h3>
   
-<p> Fly a helicopter or BungySwing </p>
-
-  <p> Update my knowledge in either french or spanish so I can comunicate properly</p>
-
-  <p> To be continued.. </p>
-
-  <p>knock knock</p>
-
-  <p>who's there?</p>
-
-  <p>daisy!</p>
-
-  <p>daisy who?</p>
-
-  <p>They see me rollin</p>
+  <p>
+    <ul>
+      <li> Visit a country in Asia -Try something i normally would say no to</li>
+      <li> Climb Kebnekaise - TO THE TOP! </li>
+      <li> Fly a helicopter or BungySwing </li>
+      <li>Update my knowledge in either french or spanish so I can comunicate properly</li>
+      <li> To be continued.. </li>
+    </ul>
+<br>
+<br>
 
   <header>
-    <h1>Hey young world</h1> 
-    <nav>
+
        <ul>
-           <li><a href="https://sundsgarden.se/">Sundsgårdens Webpage</a></li>
-           <li><a href="#second-paragraph">seconde-paragraph</a></li>
+           <li><a href="https://www.instagram.com/">My instagram</a></li>
+           <li><a href="#my-joke"> Knock knock joke</a></li>
+           <li><a href="#contact-info"> Contact info</a></li>
        </ul>
+       
+    <h1>Countries I have visited</h1> 
        <ol>
-        <li>first</li>
-        <li>second</li>
+        <li>Sweden</li>
+        <li>Denmark</li>
+        <li>Poland</li>
+        <li>Estonia</li>
+        <li>Greece</li>
+        <li>Turkey</li>
+        <li>Germany</li>
+        <li>Belgium</li>
+        <li>Holland</li>
+        <li>France</li>
+        <li>Italy</li>
+        <li>Spain</li>
+        <li>Gran Canaria</li>
+        <li>Marocco</li>
+        <li>Egypt</li>
+        <li>Dubai</li>
+        <li>Thailand</li>
+        <li>Indonesia</li>
+        <li>Brazil</li>
+        <li>Bolivia</li>
        </ol>
 
-   </nav>
-   </header>
-   <main>
-     <section id="seconde-paragraph">
-      <p>If you wanna be somebody</p>
-      <p>If you wanna go somehwere </p> 
-      <p>You better wake up and pay attention</p>
-    </section>
 
-    <section>
-<p class="cat-info"> 
-   who let the dogs
-   who? who? who? who?
-</p>
-<img src="images/MaKitties.jpg" alt="Kitties" title="My kitties">
-  </section>
+  
+  </header>
+   <main>
+     <section id="my-joke">
+       <p>Knock knock!<br>Who's there?<br>Daisy! <br>Daisy who? <br> They see me rollin'!</p>
+     </section>
+
+     <section>
+ <p class="cat-info"> Theese ma kitties.. </p>
+       <img style="width: 150px;" src="images/MaKitties.jpg" alt="Kitties" title="My kitties">
+     </section>
 
 <section>
-  <p class="last-paragraph">
-    Lalalalala Bamba!
-  </p>
-
-  </section>
+ <p id="last-paragraph">
+    Sombra and Daisy!
+ </p>
+</section>
 
 
 </main>
@@ -81,6 +85,11 @@
  
   </h5>
 </footer>
- 
+<section id="contact-info">
+ <p class="contact-info">Conact info</p>
+ <li class="phone-number">Phone: 0700 340 760</li>
+ <li class="email">E-mail: Mariam-khazroun@hotmail.com</li>
+</section>
+
 </body>
 </html>
