add info to seemorepics.html in bug-fix

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
   <title>my first webpage</title>
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/index.css">
+  <script src="https://kit.fontawesome.com/e5c0f35114.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sevillana&display=swap" rel="stylesheet">
+
    </head>
     <style>
     h1 {
       color: purple;
     }
   </style>
-  <div class="world-stuff">
 <body>
-  <h2> My bucketlist</h2>
+  <h2> My bucketlist<i class="fa-solid fa-cat"></i></h2>
   <h3> First off, Im a coward when it comes to doing something new...<br>Therefore I will by the end of next year...</h3>
   
   
