--- a/seemorepics.html
+++ b/seemorepics.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>more pictures</title>
-    <style>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/seemorepics.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sevillana&display=swap" 
+          rel="stylesheet">
+    
+   
+<p> hello hello</p>
+
+     <style>
       h1 {
         color: purple;
       }
     </style>
   </head>
   <body>
+    <h1><i class="fa-solid fa-cat"></i></h1>
+    <p>
+      hello world
+    </p>
 
   </body>
 </html>
