--- a/seemorepics.html
+++ b/seemorepics.html
@@ -6,26 +6,32 @@
     <title>more pictures</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/seemorepics.css">
-
+    <script src="https://kit.fontawesome.com/e5c0f35114.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sevillana&display=swap" 
           rel="stylesheet">
-    
-   
-<p> hello hello</p>
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-     <style>
-      h1 {
-        color: purple;
-      }
+    <style>
+      
     </style>
   </head>
   <body>
-    <h1><i class="fa-solid fa-cat"></i></h1>
-    <p>
-      hello world
-    </p>
+    <h1>A page for some more pictures <i class="fa-solid fa-cat"></i></h1>
+    <h2> Embrace yourself!</h2>
+     <section class="pic-block">
+    <img class="block-image" style="width: 300px;" src="images/Pops&Yazo.jpg" title="Pops and Yazo in Turkey">
+    <img class="block-image" style="width: 300px;" src="images/Utspring.jpg" title="Yazos Utspring">
+    <img class="block-image" style="width: 300px;" src="images/Mottagning.jpg" title="Yazos Mottagning">
+    <img class="block-image" style="width: 300px;" src="images/Funeral.jpg" title="Pops Funeral">
+  </section><br>
+  <section class="outblock-image">
+    <img class="outblock-image1" style="width: 600px;" src="images/Soccershirts.jpg" title="Moroccain Soccershirts">
+  </section>
+  <h3><span class="Crown-Icon"><i class="fa-solid fa-chess-king"></i></span> The never forgotten King!<span class="Crown-Icon"><i class="fa-solid fa-chess-king"></i></span></h3>
+
+
 
   </body>
 </html>
