added hearts and date

--- a/seemorepics.html
+++ b/seemorepics.html
@@ -29,8 +29,8 @@
   <section class="outblock-image">
     <img class="outblock-image1" style="width: 600px;" src="images/Soccershirts.jpg" title="Moroccain Soccershirts">
   </section>
-  <h3><span class="Crown-Icon"><i class="fa-solid fa-chess-king"></i></span> The never forgotten King!<span class="Crown-Icon"><i class="fa-solid fa-chess-king"></i></span></h3>
-
+  <h3><span class="Crown-Icon"><i class="fa-solid fa-chess-king"></i></span> The never forgotten King! <span class="Crown-Icon"><i class="fa-solid fa-chess-king"></i></span></h3>
+  <h3><span class="lifetime"><i class="fa-solid fa-heart"></i></span> 08.10.52 - 16.06.2024 <span class="lifetime"><i class="fa-solid fa-heart"></i></span></h3>
 
 
   </body>
